--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.1",
     "helmet": "^7.1.0",
-    "nodemailer": "^6.9.15",
+    "mongoose": "^8.10.0",
     "morgan": "^1.10.0",
-    "twilio": "^4.23.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
