--- a/src/data/appointments.json
+++ b/src/data/appointments.json
@@ -15,5 +15,22 @@
     "updatedAt": "2025-12-29T09:26:41.333Z",
     "create_at": "2025-12-29T09:26:41.333Z",
     "update_at": "2025-12-29T09:26:41.333Z"
+  },
+  {
+    "name": "Riya",
+    "phone": "+91 9999999999",
+    "email": "riya@gmail.com",
+    "date": "2025-01-05",
+    "time": "11:30 AM",
+    "reason": "Back pain",
+    "id": "d72655bd-1c6e-400d-9d40-87fc72055c18",
+    "preferred_date": "2025-01-05",
+    "preferred_time": "11:30 AM",
+    "notes": "Back pain",
+    "status": "new",
+    "createdAt": "2025-12-30T10:02:00.984Z",
+    "updatedAt": "2025-12-30T10:02:00.984Z",
+    "create_at": "2025-12-30T10:02:00.984Z",
+    "update_at": "2025-12-30T10:02:00.984Z"
   }
 ]
