--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.1",
     "helmet": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
     "mongoose": "^8.10.0",
     "morgan": "^1.10.0",
     "zod": "^3.23.8"
